2009-08-11  Dmitry Dzhus  <dima@sphinx.net.ru>

	* progmodes/gud.el (gud-stop-subjob): Rewritten without macros
	from `gdb-mi.el' to avoid extra tangling.

	* progmodes/gdb-mi.el (gdb-gud-context-call): Reverting previous
	change which breaks `gud-def' definitions. used in `gdb'.
	(gdb-update-gud-running): No extra fuss for updating frame number.

2009-08-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-cmds.el (mule-keymap, mule-menu-keymap)
	(describe-language-environment-map, setup-language-environment-map)
	(set-coding-system-map): Move initialization into declaration.
	(set-language-info-alist): Last arg to define-key-after can be skipped.

	* international/quail.el (quail-completion-1): Simplify.
	(quail-define-rules): Use slightly more compact code.
	(quail-insert-decode-map): Propertize keys, compact columns.

	* emacs-lisp/bytecomp.el (byte-compile-interactive-only-functions):
	Add goto-line.

2009-08-10  Miles Bader  <miles@gnu.org>

	* progmodes/js2-mode.el (js2-warning, js2-error, js2-jsdoc-tag)
	(js2-jsdoc-type, js2-jsdoc-value, js2-function-param)
	(js2-instance-member, js2-private-member, js2-private-function-call)
	(js2-jsdoc-html-tag-name, js2-jsdoc-html-tag-delimiter)
	(js2-magic-paren, js2-external-variable):
	Remove "-face" suffix from face names.
	(js2-jsdoc-highlight-helper, js2-highlight-jsdoc)
	(js2-highlight-undeclared-vars, js2-peek-token)
	(js2-parse-function-params, js2-mode-show-errors)
	(js2-mode-show-warnings, js2-make-magic-delimiter)
	(js2-mode-highlight-magic-parens): Update to use new face names.

2009-08-09  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-get-ls-command-with-dired): New defun.
	(tramp-handle-insert-directory): Handle "--dired".  (Bug#4075)

2009-08-09  Chong Yidong  <cyd@stupidchicken.com>

	* subr.el: Provide hashtable-print-readable.

	* progmodes/hideshow.el (hs-special-modes-alist): Don't use
	hs-c-like-adjust-block-beginning.